Enhance navbar styling; fix errors in dark mode usage; fix error in photos loading

--- a/my-website/src/components/MyNavbar.css
+++ b/my-website/src/components/MyNavbar.css
@@ -2,6 +2,7 @@
 
 /* Base Navbar Styles */
 .navbar {
+  height: auto;
   padding-top: 0.8rem;
   padding-bottom: 0.8rem;
   transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
